@@ -9,6 +9,7 @@ Release history for Dist-Zilla-Plugin-Author-KENTNL-RecommendFixes
  - Recommend some basic rules for .gitignore
  - Recommend EUMM cruft exclusions for .gitignore when Makefile.PL exists
  - Recommend proliferating INSTALL.SKIP with *.pod where relevant.
+ - Derecommend CONTRIBUTING.mkdn when CONTRIBUTING.pod is present
 
  [Dependencies::Stats]
  - Dependencies changed since 0.004003, see misc/*.deps* for details
